--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1092,7 +1092,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #18979f;
 }
 input,
 button,
