--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -153,7 +153,7 @@
         width: 13px;
         height: 13px;
         border-radius: 50%;
-        background-color: #f1b200;
+        background-color: #18979F;
         left: -50px;
     }
     .title{
@@ -180,7 +180,7 @@
 .about-title{
     color: #fff;
     h2{
-        font: 600 30px/50px $pop;
+        font: 600 30px/50px;
         letter-spacing: 0.40px;
         text-transform: uppercase;
     }
