--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -97,7 +97,7 @@
 .name-t{
     font-size:70px;
     line-height: 80px;
-    color: #18979f;
+    color: #EEE;
     text-transform: uppercase;
     font-weight: 300;
     span{
@@ -212,7 +212,7 @@
         padding-bottom: 8px;
     }
     .name-t{
-        color: $darkturquoise;
+        color: #eee;
         font-size: 60px;
         line-height: 70px;
     }
