--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -36,7 +36,7 @@ $open: 'Open Sans', sans-serif;
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Poppins:300,400,500,600,700');
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700');
 /*========== color variables ==========*/
-$yellow: #f1b200;
+$yellow: #18979F;
 $gray: #777777;
 $l-gray: #666;
 
